# uvs

./: .gitignore  README.md  VulnServer_Manual.md  kisa_scanner.sh  vul_scanner.sh  제로데이_신규취약점_대응_프로세스.md
pac4j_vuln_scanner/: README.md
schedule/: requirements.txt
schedule/c2-feeder/: c2-feeder.py
schedule/c2-feeder/C2-Daily-Feed/: 2026-03-01.csv  2026-03-02.csv  2026-03-03.csv  2026-03-04.csv  2026-03-05.csv  2026-03-06.csv  2026-03-07.csv  2026-03-08.csv  2026-03-09.csv  2026-03-10.csv  2026-03-11.csv  2026-03-12.csv  2026-03-13.csv  2026-03-14.csv  2026-03-15.csv  2026-03-16.csv  2026-03-17.csv  2026-03-18.csv  2026-03-19.csv  (+13 more)
schedule/daily_report/: common.yaml  lib.py  main.py  pyproject.toml  requirements.txt  work_log_2026-02-04.txt
schedule/daily_report/utils/: config.py  lib.py  logger.py
schedule/url-feeder/: push_to_github.sh  test.py  url-feeder.py
vuln-report-was/: package.json  server.js
vuln-report-was/templates/: export-report.ejs
vuln-report-was/views/: admin.ejs  index.ejs  login.ejs  pac4j-index.ejs  report.ejs
vuln_collector/: PLAN.md  collector.js  config.js  init-db.sql  package-lock.json  package.json
vuln_collector/lib/: db.js  dedup.js  logger.js  notifier.js  store.js  translator.js
vuln_collector/sources/: cisa-kev.js  github-advisories.js  mitre-cve.js  nvd.js
vuln_scanner/: LICENSE
vuln_scanner/nginxui_vuln_scanner/: MANUAL.md  README.md  cve_2026_27944_nginxui_scanner.sh  test_scanner.sh
vuln_scanner/pac4j_vuln_scanner/: MANUAL.md  cve_2026_29000_pac4j_scanner.sh
vuln_scanner/vuln-report-was/: server.js
(+1061 files in other folders)
